Added photos display and default avatar

--- a/market_app/templates/base.html
+++ b/market_app/templates/base.html
@@ -15,7 +15,7 @@
                 <li><a href="/all_listings/">Wszystkie ogłoszenia</a></li>
                 <li><a href="#">Opcja 2</a></li>
                 <li><a href="#">Opcja 3</a></li>
-                <li><a href="/{{ user.username }}/">Moje ogłoszenia</a></li>
+                <li><a href="/user/{{ user.username }}/">Moje ogłoszenia</a></li>
                 <li><a href="/my_account/">Moje dane</a></li>
                 <li><a href="/logout/">Wyloguj się</a></li>
             {% else %}
