--- a/market_app/templates/my_account.html
+++ b/market_app/templates/my_account.html
@@ -9,9 +9,9 @@
             <p><strong>Nazwa użytkownika:</strong> {{ user.username }}</p>
             <p><strong>Bio:</strong> {{ user.bio }}</p>
             <p><strong>Data dołączenia:</strong> {{ user.date_joined }}</p>
-            <p><strong>Liczba ogłoszeń:</strong><a href="/{{ user.username }}/"> {{ user_listings_count }}</a></p>
-            <p><strong>Liczba obserwujących:</strong><a href="/{{ user.username }}/followers/"> {{ followers_count }}</a></p>
-            <p><strong>Liczba obserwowanych:</strong><a href="/{{ user.username }}/following/"> {{ following_count }}</a></p>
+            <p><strong>Liczba ogłoszeń:</strong><a href="/user/{{ user.username }}/"> {{ user_listings_count }}</a></p>
+            <p><strong>Liczba obserwujących:</strong><a href="/user/{{ user.username }}/followers/"> {{ followers_count }}</a></p>
+            <p><strong>Liczba obserwowanych:</strong><a href="/user/{{ user.username }}/following/"> {{ following_count }}</a></p>
         </div>
         <div>
             <a href="/my_account/edit/">Edytuj dane</a>
