--- a/market_app/templates/update_user_details_form.html
+++ b/market_app/templates/update_user_details_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Zmiana danych użytkownika {{ user.username }}</h2>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Zmień dane</button>
