--- a/market_app/templates/user_listings.html
+++ b/market_app/templates/user_listings.html
@@ -7,10 +7,20 @@
         <div>
             <p><strong>Bio:</strong> {{ user.bio }}</p>
             <p><strong>Data dołączenia:</strong> {{ user.date_joined }}</p>
-            <p><strong>Obserwujący:</strong><a
-                    href="/user/{{ user.username }}/followers/"> {{ followers_count }}</a></p>
-            <p><strong>Obserwowani:</strong><a
-                    href="/user/{{ user.username }}/following/"> {{ following_count }}</a></p>
+            <p><strong>Obserwujący:</strong><a href="/user/{{ user.username }}/followers/">{{ followers_count }}</a></p>
+            <p><strong>Obserwowani:</strong><a href="/user/{{ user.username }}/following/">{{ following_count }}</a></p>
+            {% if user != request.user %}
+                <form action="/user/{{ user.username }}/" method="post">
+                    {% csrf_token %}
+                    <button type="submit">
+                        {% if user_followed %}
+                            Odobserwuj
+                        {% else %}
+                            Obserwuj
+                        {% endif %}
+                    </button>
+                </form>
+            {% endif %}
         </div>
         <div>
             {% if listings %}
