--- a/market_app/templates/base.html
+++ b/market_app/templates/base.html
@@ -21,7 +21,7 @@
             {% if user.is_authenticated %}
                 <li><a href="/all_listings/">Wszystkie ogłoszenia</a></li>
                 <li><a href="#">Opcja 2</a></li>
-                <li><a href="#">Opcja 3</a></li>
+                <li><a href="/add_listing/">Dodaj ogłoszenie</a></li>
                 <li><a href="/user/{{ request.user.username }}/">Moje ogłoszenia</a></li>
                 <li><a href="/my_account/">Moje dane</a></li>
                 <li><a href="/logout/">Wyloguj się</a></li>
