--- a/market_app/templates/listing_details.html
+++ b/market_app/templates/listing_details.html
@@ -2,17 +2,15 @@
 
 {% block content %}
     <div>
-        {% if listing.images %}
-            <div>
-                <h3>Zdjęcia:</h3>
-                {% for image in listing.images %}
-                    <img src="{{ image.url }}" alt="Image" width="200">
-                {% endfor %}
-            </div>
+        {% if images_list %}
+            {% for image in images_list %}
+                {% if image %}
+                    <img src="{{ image.url }}" alt="{{ listing.title }}" width="200">
+                {% endif %}
+            {% endfor %}
         {% else %}
-            <p><strong>Brak zdjęć</strong></p>
+            <h2>Brak zdjęć</h2>
         {% endif %}
-
         <h2>{{ listing.title }}</h2>
         <p><strong>Opis:</strong> {{ listing.description }}</p>
         <table>
