--- a/market_app/templates/user_listings.html
+++ b/market_app/templates/user_listings.html
@@ -30,10 +30,11 @@
                         <li>
                             <p><strong><a href="/listing/{{ listing.slug }}">{{ listing.title }}</a></strong></p>
                             <p><strong>Cena: {{ listing.price }}</strong></p>
-                            {% if listing.images %}
-                                <p><img src="{{ listing.images.0.url }}" alt="Image 1" width="200"></p>
+                            {% if listing.image_1 %}
+                                <p><a href="/listing/{{ listing.slug }}"><img src="{{ listing.image_1.url }}"
+                                                                              alt="Image 1" width="200"></a></p>
                             {% else %}
-                                <p><strong>Brak zdjęć</strong></p>
+                                <p><strong>Brak zdjęcia poglądowego</strong></p>
                             {% endif %}
                         </li>
                     {% endfor %}
