--- a/market_app/templates/my_account.html
+++ b/market_app/templates/my_account.html
@@ -22,6 +22,7 @@
         <div>
             <a href="/my_account/edit/">Edytuj dane</a>
             <a href="/my_account/password/">Zmień hasło</a>
+            <a href="/my_account/{{ user.id }}/delete/">Usuń konto</a>
         </div>
     </div>
 {% endblock %}
