--- a/market_app/templates/base.html
+++ b/market_app/templates/base.html
@@ -35,9 +35,54 @@
 <main>
     {% block content %}
         {% if user.is_authenticated %}
-            <footer class="user-info">
-                Witaj, {{ user.username }}!
+            <h3>Ogłoszenia obserwowanych użytkowników:</h3>
+            <ul>
+                <div>
+                    {% if page %}
+                        <ul>
+                            {% for listing in page %}
+                                <li>
+                                    <p><strong><a href="/listing/{{ listing.slug }}/">{{ listing.title }}</a></strong>
+                                    </p>
+                                    <p><strong>Cena: {{ listing.price }}</strong></p>
+                                    {% if listing.image_1 %}
+                                        <p><a href="/listing/{{ listing.slug }}/"><img src="{{ listing.image_1.url }}"
+                                                                                       alt="Image 1" width="200"></a>
+                                        </p>
+                                    {% else %}
+                                        <p><strong>Brak zdjęcia poglądowego</strong></p>
+                                    {% endif %}
+                                    <p>Sprzedający: <strong><a
+                                            href="/user/{{ listing.seller }}/">{{ listing.seller }}</a></strong></p>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        <p>Brak ogłoszeń</p>
+                    {% endif %}
+                </div>
+            </ul>
+            <div>
+        <span>
+            {% if page.has_previous %}
+                <a href="?page=1">Pierwsza</a>
+                <a href="?page={{ page.previous_page_number }}">Poprzednia</a>
+            {% endif %}
+
+            <span>
+                Strona {{ page.number }} z {{ page.paginator.num_pages }}.
+            </span>
+
+            {% if page.has_next %}
+                <a href="?page={{ page.next_page_number }}">Następna</a>
+                <a href="?page={{ page.paginator.num_pages }}">Ostatnia</a>
+            {% endif %}
+        </span>
+            </div>
+            <footer>
+                <h3>Zalogowany: {{ user.username }}</h3>
             </footer>
+
         {% else %}
             <div>
                 Aby móc korzystać z pełnych możliwości serwisu, proszę się zalogować
