--- a/market_app/templates/followers_list.html
+++ b/market_app/templates/followers_list.html
@@ -6,7 +6,9 @@
         <ul>
             {% for follower in followers %}
                 <li>
-                    <a href="/user/{{ follower.follower.username }}/"><img src="{{ follower.follower.avatar.url }}" alt="{{ follower.follower.username }}" width="50"></a>
+                    <a href="/user/{{ follower.follower.username }}/"><img src="{{ follower.follower.avatar.url }}"
+                                                                           alt="{{ follower.follower.username }}"
+                                                                           width="20"></a>
                     <a href="/user/{{ follower.follower.username }}/">{{ follower.follower.username }}</a>
                     <span>Data zaobserwowania: {{ follower.date_of_follow }}</span>
                 </li>
