--- a/market_app/templates/user_listings.html
+++ b/market_app/templates/user_listings.html
@@ -29,13 +29,15 @@
                     {% for listing in listings %}
                         <li>
                             <p><strong><a href="/listing/{{ listing.slug }}">{{ listing.title }}</a></strong></p>
-                            <p><strong>Cena: {{ listing.price }}</strong></p>
                             {% if listing.image_1 %}
                                 <p><a href="/listing/{{ listing.slug }}"><img src="{{ listing.image_1.url }}"
                                                                               alt="Image 1" width="200"></a></p>
                             {% else %}
                                 <p><strong>Brak zdjęcia poglądowego</strong></p>
                             {% endif %}
+                            <p><strong>Cena: {{ listing.price }}</strong></p>
+                            <a href="/listing/{{ listing.slug }}/edit">Edytuj</a>
+                            <a href="/listing/{{ listing.slug }}/delete">Usuń</a>
                         </li>
                     {% endfor %}
                 </ul>
