--- a/market_app/templates/user_listings.html
+++ b/market_app/templates/user_listings.html
@@ -36,8 +36,10 @@
                                 <p><strong>Brak zdjęcia poglądowego</strong></p>
                             {% endif %}
                             <p><strong>Cena: {{ listing.price }}</strong></p>
+                        {% if user == request.user %}
                             <a href="/listing/{{ listing.slug }}/edit">Edytuj</a>
                             <a href="/listing/{{ listing.slug }}/delete">Usuń</a>
+                        {% endif %}
                         </li>
                     {% endfor %}
                 </ul>
