--- a/market_app/templates/base.html
+++ b/market_app/templates/base.html
@@ -24,7 +24,7 @@
                 <li><a href="/add_listing/">Dodaj ogłoszenie</a></li>
                 <li><a href="/user/{{ request.user.username }}/">Moje ogłoszenia</a></li>
                 <li><a href="/my_offers/">Otrzymane oferty</a></li>
-                <li><a href="/my_wishlist/">Lista życzeń</a></li>
+                <li><a href="/my_wishlist/">Polubione ogłoszenia</a></li>
                 <li><a href="/my_account/">Moje dane</a></li>
                 <li><a href="/logout/">Wyloguj się</a></li>
             {% else %}
