Added creating and deleting conversation and small visual changes

--- a/market_app/templates/all_listings.html
+++ b/market_app/templates/all_listings.html
@@ -53,7 +53,7 @@
                             {% else %}
                                 <p><strong>Brak zdjęcia poglądowego</strong></p>
                             {% endif %}
-                            <p><strong>Cena: {{ listing.price }}</strong></p>
+                            <p><strong>Cena: {{ listing.price }}PLN</strong></p>
                             <p>Sprzedający: <strong><a
                                     href="/user/{{ listing.seller }}/">{{ listing.seller }}</a></strong></p>
                         </li>
