--- a/market_app/templates/delete_offer_confirm.html
+++ b/market_app/templates/delete_offer_confirm.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h2>Czy na pewno chcesz usunąć ofertę?</h2>
     <p>Ogłoszenie: {{ object.listing.title }}</p>
-    <p>Cena początkowa: {{ object.listing.price }}</p>
-    <p>Oferta: {{ object.price }}</p>
+    <p>Cena początkowa: {{ object.listing.price }}PLN</p>
+    <p>Oferta: {{ object.price }}PLN</p>
     <p>Od: <img src="{{ object.user.avatar.url }}" alt="Avatar" width="20"> {{ object.user }}</p>
     <form method="post">
         {% csrf_token %}
