--- a/market_app/templates/my_offers.html
+++ b/market_app/templates/my_offers.html
@@ -12,7 +12,7 @@
                 {% else %}
                     <p><strong>Brak zdjęcia poglądowego</strong></p>
                 {% endif %}
-                <p>Cena ogłoszenia: {{ item.listing.price }}</p>
+                <p>Cena ogłoszenia: {{ item.listing.price }}PLN</p>
                 {% if item.offers %}
                     <h4>Oferty:</h4>
                     <ul>
