--- a/market_app/templates/listing_details.html
+++ b/market_app/templates/listing_details.html
@@ -1,53 +1,51 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
-        {% if images_list %}
-            {% for image in images_list %}
-                {% if image %}
-                    <img src="{{ image.url }}" alt="{{ listing.title }}" width="350">
-                {% endif %}
-            {% endfor %}
-        {% else %}
-            <h2>Brak zdjęć</h2>
-        {% endif %}
-        <h2>{{ listing.title }}</h2>
-        <p><strong>Opis:</strong> {{ listing.description }}</p>
-        <table>
-            <tr>
-                <td><strong>Sprzedający:</strong></td>
-                <td><a href="/user/{{ listing.seller.username }}/"><img src="{{ listing.seller.avatar.url }}"
-                                                                        alt="Avatar" width="20">{{ listing.seller }}</a>
-                </td>
-            </tr>
-            <tr>
-                <td><strong>Kategoria:</strong></td>
-                <td>{{ listing.get_category_display }}</td>
-            </tr>
-            <tr>
-                <td><strong>Gatunek:</strong></td>
-                <td>{{ listing.get_genre_display }}</td>
-            </tr>
-            <tr>
-                <td><strong>Cena:</strong></td>
-                <td>{{ listing.price }}</td>
-            </tr>
-            <tr>
-                <td><strong>Artysta:</strong></td>
-                <td>{{ listing.artist }}</td>
-            </tr>
-            <tr>
-                <td><strong>Stan:</strong></td>
-                <td>{{ listing.get_condition_display }}</td>
-            </tr>
-            <tr>
-                <td><strong>Data dodania:</strong></td>
-                <td>{{ listing.date_listed }}</td>
-            </tr>
-                <td><strong>Liczba polubień:</strong></td>
-                <td>{{ listing_likes_count }}</td>
-        </table>
-    </div>
+    {% if images_list %}
+        {% for image in images_list %}
+            {% if image %}
+                <img src="{{ image.url }}" alt="{{ listing.title }}" width="350">
+            {% endif %}
+        {% endfor %}
+    {% else %}
+        <h2>Brak zdjęć</h2>
+    {% endif %}
+    <h2>{{ listing.title }}</h2>
+    <p><strong>Opis:</strong> {{ listing.description }}</p>
+    <table>
+        <tr>
+            <td><strong>Sprzedający:</strong></td>
+            <td><a href="/user/{{ listing.seller.username }}/"><img src="{{ listing.seller.avatar.url }}"
+                                                                    alt="Avatar" width="20">{{ listing.seller }}</a>
+            </td>
+        </tr>
+        <tr>
+            <td><strong>Kategoria:</strong></td>
+            <td>{{ listing.get_category_display }}</td>
+        </tr>
+        <tr>
+            <td><strong>Gatunek:</strong></td>
+            <td>{{ listing.get_genre_display }}</td>
+        </tr>
+        <tr>
+            <td><strong>Cena:</strong></td>
+            <td>{{ listing.price }}PLN</td>
+        </tr>
+        <tr>
+            <td><strong>Artysta:</strong></td>
+            <td>{{ listing.artist }}</td>
+        </tr>
+        <tr>
+            <td><strong>Stan:</strong></td>
+            <td>{{ listing.get_condition_display }}</td>
+        </tr>
+        <tr>
+            <td><strong>Data dodania:</strong></td>
+            <td>{{ listing.date_listed }}</td>
+        </tr>
+        <td><strong>Liczba polubień:</strong></td>
+        <td>{{ listing_likes_count }}</td>
+    </table>
     {% if user.is_authenticated and user == listing.seller %}
         <h3>Liczba ofert: {{ offers_count }}</h3>
         <a href="/listing/{{ listing.slug }}/likes/">Zobacz zainteresowanych</a>
@@ -71,6 +69,15 @@
                 {% csrf_token %}
                 <button type="submit">Dodaj do listy życzeń</button>
             </form>
+        {% endif %}
+        {% if not conversation %}
+            <form method="post">
+                {% csrf_token %}
+                {{ conversation_form.as_p }}
+                <button type="submit">Napisz wiadomość</button>
+            </form>
+        {% else %}
+            <a href="/inbox/{{ conversation.0.id }}/">Przejdź do konwersacji</a>
         {% endif %}
     {% endif %}
 {% endblock %}
