--- a/market_app/templates/wishlist.html
+++ b/market_app/templates/wishlist.html
@@ -14,7 +14,7 @@
                     {% else %}
                         <p><strong>Brak zdjęcia poglądowego</strong></p>
                     {% endif %}
-                    <p><strong>Cena: {{ listing.price }}</strong></p>
+                    <p><strong>Cena: {{ listing.price }}PLN</strong></p>
                     <p>Sprzedający: <strong><a
                             href="/user/{{ listing.seller }}/"><img src="{{ listing.seller.avatar.url }}" alt="Avatar"
                                                                     width="20"> {{ listing.seller }}</a></strong></p>
