Added css, small changes to htmls

--- a/market_app/templates/base.html
+++ b/market_app/templates/base.html
@@ -1,9 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <title>GrooveMarket</title>
-    <style>
-    </style>
 </head>
 <body>
 <div class="notification">
